<resources>
    <string name="app_name">Badminton Training</string>
    <string name="devby">พัฒนาโดย</string>
    <string name="devby2">ผู้พัฒนา</string>
    <string name="title_main">โปรดเลือก Icon</string>
    <string name="title_rules">กฎกติกา</string>
    <string name="title_video">วีดีโอ</string>
    <string name="title_score">นับคะแนน</string>
    <string name="title_search">ค้นหาสนาม</string>
    <string name="title_developer">ผู้พัฒนา</string>
    <string name="title_training">ทดสอบ</string>
    <string name="rules1">กติกาการเล่นแบดมินตัน</string>
    <string name="rules2">การออกนอกเขต มีการกำหนดเส้นออกนอกเขตแตกต่างกันในกรณีเล่นเดี่ยวและเล่นคู่</string>
    <string name="rules3">การเสิร์ฟลูกตามกติกาที่ถูกต้อง คือ ขณะที่ปลายของไม้แบดมินตันสัมผัสลูกต้องต่ำกว่าระดับเอวอย่างเห็นได้ชัด ผู้เล่นต้องไม่ถ่วงเวลาหรือเสิร์ฟช้า หรือเสิร์ฟ 2 จังหวะ การเสิร์ฟต้องเสิร์ฟไปด้วยจังหวะเดียว ขณะเสิร์ฟ ส่วนใดส่วนหนึ่งของเท้าทั้งสอง ข้างต้องสัมผัสพื้นตลอดเวลา และต้องให้ไม้แบดมินตันสัมผัสกับหัวลูกขนไก่ก่อน หากโดนขนก่อนถือว่าผิดกติกา </string>
    <string name="rules4">ขณะตีลูกโต้กัน ห้ามนำส่วนใดส่วนหนึ่งของร่างกายหรือไม้แบดไปสัมผัสกับ (Over Net)</string>
    <string name="rules5">ห้ามตีลูกที่ฝั่งตรงข้ามโต้กลับมาในขณะที่ลูกยังไม่ข้ามเน็ทมายังแดนของเรา </string>
    <string name="rules6">กติกาการนับคะแนน</string>
    <string name="rules7">Match หนึ่งต้องชนะให้ได้มากที่สุดใน 3 เกม</string>
    <string name="rules8">ทุกประเภทของการแข่งขัน  ฝ่ายที่ได้ 21 คะแนนก่อนเป็นฝ่ายชนะในเกมนั้น ยกเว้นเมื่อได้ 20 คะแนนเท่ากันต้องนับต่อให้มีคะแนนห่างกัน 2 คะแนน ฝ่ายใดได้คะแนนนำ 2 คะแนนก่อนเป็นผู้ชนะ  แต่ไม่เกิน 30 คะแนน หมายความว่าหากการเล่นดำเนินมาจนถึง 29 คะแนนเท่ากัน  ฝ่ายใดได้ 30 คะแนนก่อน เป็นผู้ชนะ ฝ่ายชนะเป็นฝ่ายส่งลูกต่อในเกมต่อไป</string>
    <string name="rules9">ฝ่ายชนะการเสี่ยงทายสิทธิ์เป็นฝ่ายส่งลูกได้ก่อน หากฝ่ายตรงข้ามตีลูกเสีย หรือลูกไม่ได้อยู่ในการเล่น ผู้เลือกส่งลูกก่อนจะได้คะแนนนำ 1-0 และได้ส่งลูกต่อ แต่หากผู้ส่งลูกทำลูกเสีย หรือลูกไม่อยู่ในการเล่น ฝ่ายตรงข้ามจะได้คะแนนตามมาทันทีเป็น 1-1 และฝ่ายตรงข้ามจะได้สิทธิ์ส่งลูกแทน ดำเนินเช่นนี้ต่อไปจนจบเกม</string>
    <string name="rules10">ประเภทคู่ให้ส่งลูกฝ่ายละ 1 ครั้ง ตามคะแนนที่ได้ขณะที่เปลี่ยนฝ่ายส่งลูก หากคะแนนเป็นจำนวนคี่ ผู้อยู่คอร์ดด้านซ้ายเป็นผู้ส่งลูก หากคะแนนเป็นจำนวนคู่ผู้อยู่คอร์ดด้านขวาเป็นฝ่ายส่งลูก</string>
    <string name="rules11">การดิวส์</string>
    <string name="rules12">หากผู้เล่นทั้งสองฝ่ายทำคะแนนได้เท่ากันในคะแนนที่ 20 จะมีการเล่นต่อ จนกว่าว่าจะมีคะแนนมากกว่าฝ่ายตรงข้าม 2 คะแนน แต่ถ้ายังไม่สามารถทำคะแนนห่างกัน 2 แต้มได้ จะเล่นต่อไปเรื่อย ๆ แต่ เมื่อแต้มได้ 29 เท่ากัน ใครที่ทำได้แต้ม 30 ก่อนจะเป็นฝ่ายชนะทันที</string>
    <string name="developer1">นายกาน  เพ็งเนตร </string>
    <string name="developer2">Badminton Training Application</string>
    <string name="developer3">คณะวิทยาศาสตร์และเทคโนโลยี</string>
    <string name="developer4">สาขาวิทยาการคอมพิวเตอร์</string>
    <string name="developer5">นางสาวสินีพรรณ  สร้อยพลู  </string>
    <string name="developer6">รหัสนักศึกษา 56-07024-16799</string>
    <string name="developer7">รหัสนักศึกษา 56-07024-16700</string>




    <string name="title_activity_maps">Map</string>


</resources>
