<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kbu.sineepun.kanpengnet.badmintontraining.RulesActivity"
    android:background="@drawable/grey_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_rules"
        android:id="@+id/textView11"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView11"
        android:layout_above="@+id/button"
        android:layout_margin="15dp"
        android:padding="15dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                android:src="@drawable/rules1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules1"
                android:id="@+id/textView12"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules2"
                android:id="@+id/textView14"
                android:textSize="@dimen/h3"
                android:textColor="@color/text"
                android:textIsSelectable="false"
                android:layout_marginTop="10dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules3"
                android:id="@+id/textView13"
                android:textSize="@dimen/h3"
                android:textStyle="normal"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules4"
                android:id="@+id/textView29"
                android:textSize="@dimen/h3"
                android:textStyle="normal"
                android:textColor="@color/text"
                android:textIsSelectable="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules5"
                android:id="@+id/textView30"
                android:textSize="@dimen/h3"
                android:textColor="@color/text"
                android:layout_marginTop="10dp"
                android:textStyle="normal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:src="@drawable/r1"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules6"
                android:id="@+id/textView31"
                android:textSize="@dimen/h2"
                android:textColor="@color/text"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules7"
                android:id="@+id/textView32"
                android:textSize="@dimen/h3"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules8"
                android:id="@+id/textView33"
                android:textSize="@dimen/h3"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules9"
                android:id="@+id/textView34"
                android:textSize="@dimen/h3"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules10"
                android:id="@+id/textView35"
                android:textSize="@dimen/h3"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules11"
                android:id="@+id/textView36"
                android:textSize="@dimen/h2"
                android:layout_marginTop="15dp"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules12"
                android:id="@+id/textView37"
                android:textSize="@dimen/h3"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
