<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kbu.sineepun.kanpengnet.badmintontraining.DeveloperActivity"
    android:background="@drawable/grey_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devby2"
        android:id="@+id/textView28"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_dark" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/button5"
        android:allowUndo="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_margin="15dp"
        android:layout_below="@+id/textView28"
        android:layout_above="@+id/button5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button6"
                android:layout_gravity="top|center_horizontal"
                android:background="@drawable/logo_kbu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer2"
                android:id="@+id/textView38"
                android:textSize="@dimen/h2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer3"
                android:id="@+id/textView39"
                android:textSize="@dimen/h2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer4"
                android:id="@+id/textView40"
                android:textSize="@dimen/h2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer5"
                android:id="@+id/textView41"
                android:textSize="@dimen/h2"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer7"
                android:id="@+id/textView43"
                android:textSize="@dimen/h2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView9"
                android:background="@drawable/np"
                android:layout_gravity="bottom"
                android:layout_margin="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer1"
                android:id="@+id/textView42"
                android:textSize="@dimen/h2"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer6"
                android:id="@+id/textView44"
                android:textSize="@dimen/h2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView10"
                android:background="@drawable/np"
                android:layout_gravity="bottom"
                android:layout_margin="20dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
