<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kbu.sineepun.kanpengnet.badmintontraining.MainHub"
    android:background="@drawable/bg7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Badminton Training"
        android:id="@+id/textView4"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_background_cache_hint_selector_material_light"
        android:layout_marginTop="0dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_weight="1"
                android:src="@drawable/rules" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_weight="1"
                android:src="@drawable/video_01" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_rules"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_disable_only_material_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_video"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_disable_only_material_dark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_weight="1"
                android:src="@drawable/scoer_01" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:layout_weight="1"
                android:src="@drawable/search_01" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_score"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_disable_only_material_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_disable_only_material_dark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView6"
                android:layout_weight="1"
                android:src="@drawable/training_01" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView7"
                android:layout_weight="1"
                android:src="@drawable/develuper" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_training"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_disable_only_material_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_developer"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_disable_only_material_dark" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
